--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,14 +14,13 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2.4.0
             - name: Pull and run
-              uses: garygrossgarten/github-action-ssh@v0.6.3
+              uses: appleboy/ssh-action@master
               with:
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USERNAME }}
                   port: ${{ secrets.PORT }}
                   password: ${{ secrets.PASSWORD }}
-                  command: 
-                    - |
+                  script: |
                         cd ${{ secrets.FOLDER }} /
                         sudo docker-compose down /
                         git pull /
