--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,11 @@ jobs:
                   script_stop: true
                   script: |
                         cd ${{ secrets.FOLDER }}
-                        echo ${{ secrets.PASSWORD }}
-                        sudo -S docker-compose down
+                        echo ${{ secrets.PASSWORD }} && sudo -S docker-compose down
                         git pull
                         echo "MONGO_HOST=${{ secrets.MONGO_HOST }}" > .env
                         echo "RMQ_HOST=${{ secrets.RMQ_HOST }}" > .env
                         echo "RMQ_PORT=${{ secrets.RMQ_PORT }}" > .env
                         echo "JOURLAY_TOKEN=${{ secrets.JOURLAY_TOKEN }}" > .env
                         echo "JOURLAY_DM=${{ secrets.JOURLAY_DM }}" > .env
-                        echo ${{ secrets.PASSWORD }}
-                        sudo docker-compose up -d 
+                        echo ${{ secrets.PASSWORD }} && sudo -S docker-compose up -d 
