--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,12 @@ jobs:
                   script_stop: true
                   script: |
                         cd ${{ secrets.FOLDER }}
-                        docker-compose down
-                        git pull
+                        rm -rf .env
                         echo "MONGO_HOST=${{ secrets.MONGO_HOST }}" > .env
                         echo "RMQ_HOST=${{ secrets.RMQ_HOST }}" > .env
                         echo "RMQ_PORT=${{ secrets.RMQ_PORT }}" > .env
                         echo "JOURLAY_TOKEN=${{ secrets.JOURLAY_TOKEN }}" > .env
                         echo "JOURLAY_DM=${{ secrets.JOURLAY_DM }}" > .env
+                        docker-compose down
+                        git pull
                         docker-compose up -d 
