--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,6 @@ jobs:
                     echo "RMQ_PORT=${{ secrets.RMQ_PORT }}" > .env
                     echo "JOURLAY_TOKEN=${{ secrets.JOURLAY_TOKEN }}" > .env
                     echo "JOURLAY_DM=${{ secrets.JOURLAY_DM }}" > .env
-                    docker-compose down
                     git pull
-                    docker-compose up -d
+                    yarn build
+                    pm2 restart ecosystem.config.js
