--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
                   script: |
                     cd ${{ secrets.FOLDER }}
                     rm -rf .env
+                    touch .env
                     echo "MONGO_HOST=${{ secrets.MONGO_HOST }}" > .env
                     echo "RMQ_HOST=${{ secrets.RMQ_HOST }}" > .env
                     echo "RMQ_PORT=${{ secrets.RMQ_PORT }}" > .env
