--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,6 @@ jobs:
                     echo "JOURLAY_TOKEN=${{ secrets.JOURLAY_TOKEN }}" > .env
                     echo "JOURLAY_DM=${{ secrets.JOURLAY_DM }}" > .env
                     git pull
+                    yarn install
                     yarn build
                     pm2 restart ecosystem.config.js
