--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,11 @@ jobs:
                   script_stop: true
                   script: |
                     cd ${{ secrets.FOLDER }}
-                    > .env
                     echo MONGO_HOST=${{ secrets.MONGO_HOST }} > .env
-                    echo RMQ_HOST=${{ secrets.RMQ_HOST }} > .env
-                    echo RMQ_PORT=${{ secrets.RMQ_PORT }} > .env
-                    echo JOURLAY_TOKEN=${{ secrets.JOURLAY_TOKEN }} > .env
-                    echo JOURLAY_DM=${{ secrets.JOURLAY_DM }} > .env
+                    echo RMQ_HOST=${{ secrets.RMQ_HOST }} >> .env
+                    echo RMQ_PORT=${{ secrets.RMQ_PORT }} >> .env
+                    echo JOURLAY_TOKEN=${{ secrets.JOURLAY_TOKEN }} >> .env
+                    echo JOURLAY_DM=${{ secrets.JOURLAY_DM }} >> .env
                     git pull
                     yarn install
                     yarn build
