--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         build:
             context: .
         volumes:
+            - .:/app
             - /app/node_modules
         command: npm run start:prod
         env_file:
