--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         volumes:
             - .:/app
             - /app/node_modules
-        command: npm run start:prod
+        command: npm run start:dev
         env_file:
             - .env
 networks:
